[package]
name = "token-vesting"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "=1.7.9"
borsh = "0.9.1"
borsh-derive = "0.9.1"
thiserror = "1.0.30"
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}

[dev-dependencies]
solana-sdk = "=1.7.9"
solana-program-test = "=1.7.9"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"]}
chrono = "0.4.19"
spl-associated-token-account = "1.0.3"

[lib]
crate-type = ["cdylib", "lib"]
